# vexy-pdf-werk

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PLAN.md  QWEN.md  README.md  SPEC.md  TODO.md  WORK.md  build.sh  llms.txt  mkdocs.yml  package.toml  pyproject.toml  src.txt  src_docs.txt
.github/workflows/: build-docs.yml  push.yml  release.yml
docs/: 404.html  index.html  sitemap.xml
docs/00-index/: index.html
docs/01-getting-started/00-installation/: index.html
docs/01-getting-started/01-quick-start/: index.html
docs/02-user-guide/00-cli-usage/: index.html
docs/02-user-guide/01-configuration/: index.html
docs/02-user-guide/02-output-formats/: index.html
docs/03-api-reference/00-index/: index.html
docs/03-api-reference/01-core-components/: index.html
docs/03-api-reference/02-integrations/: index.html
docs/03-api-reference/03-utilities/: index.html
docs/04-specification/00-introduction-and-architecture/: index.html
docs/04-specification/01-technology-stack-and-configuration/: index.html
docs/04-specification/02-integration-points-and-error-handling/: index.html
docs/04-specification/03-security-performance-and-quality/: index.html
docs/04-specification/04-extensibility-and-success-criteria/: index.html
docs/05-development/00-contributing/: index.html
docs/05-development/01-testing/: index.html
docs/05-development/02-release-process/: index.html
docs/search/: search_index.json
examples/: EXAMPLES_SUMMARY.md  README.md  results.txt  run_examples.py
examples/output/basic_example/: 0--drylabnewsfor-investors-friends-may-2-017.md  000--drylabnewsfor-investors-friends-may-2-017.md  001--holmsen-torstein-hansen-and-jostein.md  2--paralinx-about-camera-integration-amazon.md  metadata.yaml  test1.epub
examples/output/batch_example/base64image/: 0--produced-with-a-trial-version-of-pdf-annotator-.md  000--produced-with-a-trial-version-of-pdf-annotator-.md  base64image.epub  metadata.yaml
examples/output/batch_example/multicolumn/: 0--two-column-document-with-lorem-ipsum.md  000--two-column-document-with-lorem-ipsum.md  001--lacus-vel-est-curabitur-consectetuer.md  002--table-1-eu-countries-information.md  1--lacus-vel-est-curabitur-consectetuer.md  2--table-1-eu-countries-information.md  metadata.yaml  multicolumn.epub
examples/output/batch_example/pdflatex-image/: 0--1-your-chapter.md  000--1-your-chapter.md  metadata.yaml  pdflatex-image.epub
examples/output/batch_example/test1/: 002--paralinx-about-camera-integration-amazon.md  1--holmsen-torstein-hansen-and-jostein.md  metadata.yaml  test1.epub
examples/output/cli_batch/base64image/: demo_page.md  metadata.yaml
examples/output/cli_batch/multicolumn/: demo_page.md  metadata.yaml
examples/output/cli_batch/pdflatex-image/: demo_page.md  metadata.yaml
examples/output/cli_batch/test1/: demo_page.md  metadata.yaml
examples/python_examples/: ai_enhancement.py  basic_usage.py  batch_processing.py  custom_config.py  simple_usage.py
examples/shell_examples/: basic_conversion.sh  batch_convert.sh  format_selection.sh
output/test_document/: 0--chapter-1-introduction.md  1--chapter-2-main-content.md  metadata.yaml  test_document.epub
src/vexy_pdf_werk/: __init__.py  __main__.py  cli.py  config.py  simple_cli.py  simple_config.py  vexy_pdf_werk.py
src/vexy_pdf_werk/core/: epub_creator.py  markdown_converter.py  metadata_extractor.py  pdf_processor.py  qdf_processor.py
src/vexy_pdf_werk/integrations/: ai_services.py
src/vexy_pdf_werk/utils/: file_utils.py  slug_utils.py  validation.py
src_docs/: 00-index.md  architecture.md  index.md
src_docs/01-getting-started/: 00-installation.md  01-quick-start.md
src_docs/02-user-guide/: 00-cli-usage.md  01-configuration.md  02-output-formats.md
src_docs/03-api-reference/: 00-index.md  03-utilities.md
src_docs/04-specification/: 00-introduction-and-architecture.md  01-technology-stack-and-configuration.md  02-integration-points-and-error-handling.md  03-security-performance-and-quality.md  04-extensibility-and-success-criteria.md
src_docs/05-development/: 00-contributing.md  01-testing.md  02-release-process.md
src_docs/api/: cli.md  config.md  core.md  index.md  integrations.md
src_docs/examples/: cli_usage.md  index.md  python_api.md
src_docs/specification/: 01-technology-stack-and-configuration.md  02-integration-points-and-error-handling.md  03-security-performance-and-quality.md  04-extensibility-and-success-criteria.md  05-development-environment-setup.md  06-project-initialization-and-structure.md  07-pyproject-toml-configuration.md  08-initial-file-setup.md  09-cli-and-config.md  10-git-and-verification.md  11-development-workflow.md  12-pdf-processor-implementation.md  13-markdown-generator-implementation.md  14-ai-services-and-qdf.md  15-pdf-processor-integration.md  16-ai-services-implementation.md  17-testing-and-deployment.md  18-unit-tests.md  19-pdf-processor-tests.md  20-integration-tests.md  21-cli-tests.md  22-quality-assurance.md  23-packaging-and-distribution.md  24-ci-setup.md
tests/: conftest.py  test_async_patterns_improved.py  test_cli.py  test_epub_creator.py  test_markdown_backend_selection.py  test_markdown_converter.py  test_metadata_extractor.py  test_metadata_extractor_simple.py  test_package.py  test_pdf_integration.py  test_pdf_processor.py  test_qdf_processor.py
